--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "night-coder",
-  "displayName": "Night-Coder",
-  "description": "theme",
+  "displayName": "night-coder",
+  "description": "",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.72.0"
@@ -14,7 +14,7 @@
       {
         "label": "Night Coder",
         "uiTheme": "vs-dark",
-        "path": "./themes/Night Coder-color-theme.json"
+        "path": "./themes/night-coder-color-theme.json"
       }
     ]
   }
